[gd_scene load_steps=22 format=4 uid="uid://dc3lkcde1lb0d"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_17sqy"]
[ext_resource type="Script" path="res://scripts/gui.gd" id="3_8f3e8"]
[ext_resource type="PackedScene" uid="uid://b8g56a6iwqwj4" path="res://scenes/Player.tscn" id="3_cjhma"]
[ext_resource type="TileSet" uid="uid://c7l00m34vl2fu" path="res://sprites/kenney_1bit_tile_set.tres" id="4_0y7o1"]
[ext_resource type="Texture2D" uid="uid://comp5qnqhbwk3" path="res://sprites/speed_progress_empty.png" id="6_fobtj"]
[ext_resource type="Shader" path="res://shaders/CRT.gdshader" id="7_72rn1"]
[ext_resource type="Texture2D" uid="uid://bop2p2kkfum7v" path="res://sprites/speed_progress_full.png" id="7_eey7u"]
[ext_resource type="Texture2D" uid="uid://bfmmndn1pfeg0" path="res://sprites/heart.png" id="8_wdn2o"]
[ext_resource type="Material" uid="uid://brhp4urdiiyam" path="res://shaders/pixel_shader.tres" id="9_a3mqr"]
[ext_resource type="FontFile" uid="uid://fkvlmdfrsptc" path="res://fonts/PixelEmulator-xq08.ttf" id="9_cfu0n"]
[ext_resource type="FontFile" uid="uid://dtcnt4p1so4kt" path="res://fonts/VonwaonBitmap-16px.ttf" id="9_f8by4"]
[ext_resource type="Theme" uid="uid://bs5flrp8xi2qb" path="res://new_theme.tres" id="9_jsu31"]
[ext_resource type="PackedScene" uid="uid://cry0ik0k7kv3m" path="res://scenes/Platform.tscn" id="12_32oxp"]
[ext_resource type="PackedScene" uid="uid://drkn0ddrxj1gn" path="res://scenes/flyingmob.tscn" id="13_rup4j"]
[ext_resource type="AudioStream" uid="uid://c7f8ss5opssxb" path="res://audios/SFX_-_beep_01.ogg" id="15_guqou"]
[ext_resource type="AudioStream" uid="uid://ck1eo5gjo32o1" path="res://audios/SFX_-_positive_02.ogg" id="16_uf7pm"]
[ext_resource type="AudioStream" uid="uid://c5u7befwbsvxy" path="res://audios/Action_-_Into_Orbit.ogg" id="17_7f12c"]

[sub_resource type="Curve2D" id="Curve2D_17i63"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, 400, 0, 0, 0, 0, 216, 400)
}
point_count = 2

[sub_resource type="GDScript" id="GDScript_m22vb"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6k1d8"]
size = Vector2(104, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i8uc0"]
shader = ExtResource("7_72rn1")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.2
shader_parameter/resolution = Vector2(1280, 960)
shader_parameter/pixelate = true
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.1
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.3
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Main" type="Node2D"]
script = ExtResource("1_17sqy")
platform = ExtResource("12_32oxp")
flying = ExtResource("13_rup4j")

[node name="PlatformSpawn" type="Path2D" parent="."]
scale = Vector2(2, 2)
curve = SubResource("Curve2D_17i63")

[node name="PathFollow2D" type="PathFollow2D" parent="PlatformSpawn"]
position = Vector2(109.594, 400)
progress = 45.6

[node name="World" type="Node2D" parent="."]
script = SubResource("GDScript_m22vb")

[node name="Player" parent="World" instance=ExtResource("3_cjhma")]
position = Vector2(160, 120)
max_acceleration = 1550

[node name="TileMapLayer" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAAQAAAAAAARABIAAAAQAAEAAAARABIAAAAQAAIAAAARABIAAAAQAAMAAAARABIAAAAQAAQAAAARABIAAAAQAAUAAAARABIAAAAQAAYAAAARABIAAAAQAAcAAAARABIAAAAQAAgAAAARABIAAAAQAAkAAAARABIAAAAQAAoAAAARABIAAAAQAAsAAAARABIAAAAQAAwAAAARABIAAAAQAA0AAAARABIAAAAQAA4AAAARABIAAAAQAA8AAAARABIAAAAQABAAAAARABIAAAAQABEAAAARABIAAAADAAAAAAATABIAAAADAAEAAAATABIAAAADAAIAAAATABIAAAADAAMAAAATABIAAAADAAQAAAATABIAAAADAAUAAAATABIAAAADAAYAAAATABIAAAADAAcAAAATABIAAAADAAgAAAATABIAAAADAAkAAAATABIAAAADAAoAAAATABIAAAADAAsAAAATABIAAAADAAwAAAATABIAAAADAA0AAAATABIAAAADAA4AAAATABIAAAADAA8AAAATABIAAAADABAAAAATABIAAAADABEAAAATABIAAAAEAAAAAAAGAAgAAAAFAAAAAAAGAAgAAAAGAAAAAAAGAAgAAAAHAAAAAAAGAAgAAAAIAAAAAAAGAAgAAAAJAAAAAAAGAAgAAAAKAAAAAAAGAAgAAAALAAAAAAAGAAgAAAAMAAAAAAAGAAgAAAANAAAAAAAGAAgAAAAOAAAAAAAGAAgAAAAPAAAAAAAGAAgAAAAQABIAAAARABIAAAAQABMAAAARABIAAAAQABQAAAARABIAAAAQABUAAAARABIAAAAQABYAAAARABIAAAAQABcAAAARABIAAAAQABgAAAARABIAAAAQABkAAAARABIAAAAQABoAAAARABIAAAAQABsAAAARABIAAAAQABwAAAARABIAAAAQAB0AAAARABIAAAAQAB4AAAARABIAAAAQAB8AAAARABIAAAAQACAAAAARABIAAAAQACEAAAARABIAAAAQACIAAAARABIAAAAQACMAAAARABIAAAAQACQAAAARABIAAAAQACUAAAARABIAAAAQACYAAAARABIAAAAQACcAAAARABIAAAAQACgAAAARABIAAAAQACkAAAARABIAAAAQACoAAAARABIAAAAQACsAAAARABIAAAAQACwAAAARABIAAAAQAC0AAAARABIAAAAQAC4AAAARABIAAAAQAC8AAAARABIAAAAQADAAAAARABIAAAAQADEAAAARABIAAAAQADIAAAARABIAAAAQADMAAAARABIAAAAQADQAAAARABIAAAAQADUAAAARABIAAAAQADYAAAARABIAAAAQADcAAAARABIAAAAQADgAAAARABIAAAAQADkAAAARABIAAAAQADoAAAARABIAAAAQADsAAAARABIAAAADABIAAAATABIAAAADABMAAAATABIAAAADABQAAAATABIAAAADABUAAAATABIAAAADABYAAAATABIAAAADABcAAAATABIAAAADABgAAAATABIAAAADABkAAAATABIAAAADABoAAAATABIAAAADABsAAAATABIAAAADABwAAAATABIAAAADAB0AAAATABIAAAADAB4AAAATABIAAAADAB8AAAATABIAAAADACAAAAATABIAAAADACEAAAATABIAAAADACIAAAATABIAAAADACMAAAATABIAAAADACQAAAATABIAAAADACUAAAATABIAAAADACYAAAATABIAAAADACcAAAATABIAAAADACgAAAATABIAAAADACkAAAATABIAAAADACoAAAATABIAAAADACsAAAATABIAAAADACwAAAATABIAAAADAC0AAAATABIAAAADAC4AAAATABIAAAADAC8AAAATABIAAAADADAAAAATABIAAAADADEAAAATABIAAAADADIAAAATABIAAAADADMAAAATABIAAAADADQAAAATABIAAAADADUAAAATABIAAAADADYAAAATABIAAAADADcAAAATABIAAAADADgAAAATABIAAAADADkAAAATABIAAAADADoAAAATABIAAAADADsAAAATABIAAAAQADwAAAARABIAAAAQAD0AAAARABIAAAAQAD4AAAARABIAAAAQAD8AAAARABIAAAAQAEAAAAARABIAAAAQAEEAAAARABIAAAAQAEIAAAARABIAAAAQAEMAAAARABIAAAAQAEQAAAARABIAAAAQAEUAAAARABIAAAAQAEYAAAARABIAAAAQAEcAAAARABIAAAAQAEgAAAARABIAAAAQAEkAAAARABIAAAAQAEoAAAARABIAAAAQAEsAAAARABIAAAAQAEwAAAARABIAAAAQAE0AAAARABIAAAAQAE4AAAARABIAAAAQAE8AAAARABIAAAAQAFAAAAARABIAAAAQAFEAAAARABIAAAAQAFIAAAARABIAAAAQAFMAAAARABIAAAAQAFQAAAARABIAAAAQAFUAAAARABIAAAAQAFYAAAARABIAAAAQAFcAAAARABIAAAAQAFgAAAARABIAAAAQAFkAAAARABIAAAAQAFoAAAARABIAAAAQAFsAAAARABIAAAAQAFwAAAARABIAAAAQAF0AAAARABIAAAAQAF4AAAARABIAAAAQAF8AAAARABIAAAAQAGAAAAARABIAAAAQAGEAAAARABIAAAAQAGIAAAARABIAAAAQAGMAAAARABIAAAAQAGQAAAARABIAAAAQAGUAAAARABIAAAAQAGYAAAARABIAAAAQAGcAAAARABIAAAAQAGgAAAARABIAAAAQAGkAAAARABIAAAAQAGoAAAARABIAAAAQAGsAAAARABIAAAAQAGwAAAARABIAAAAQAG0AAAARABIAAAAQAG4AAAARABIAAAAQAG8AAAARABIAAAAQAHAAAAARABIAAAAQAHEAAAARABIAAAAQAHIAAAARABIAAAAQAHMAAAARABIAAAAQAHQAAAARABIAAAAQAHUAAAARABIAAAAQAHYAAAARABIAAAAQAHcAAAARABIAAAAQAHgAAAARABIAAAAQAHkAAAARABIAAAAQAHoAAAARABIAAAAQAHsAAAARABIAAAAQAHwAAAARABIAAAAQAH0AAAARABIAAAAQAH4AAAARABIAAAAQAH8AAAARABIAAAAQAIAAAAARABIAAAAQAIEAAAARABIAAAAQAIIAAAARABIAAAAQAIMAAAARABIAAAAQAIQAAAARABIAAAAQAIUAAAARABIAAAAQAIYAAAARABIAAAAQAIcAAAARABIAAAAQAIgAAAARABIAAAAQAIkAAAARABIAAAAQAIoAAAARABIAAAAQAIsAAAARABIAAAAQAIwAAAARABIAAAAQAI0AAAARABIAAAAQAI4AAAARABIAAAAQAI8AAAARABIAAAAQAJAAAAARABIAAAAQAJEAAAARABIAAAAQAJIAAAARABIAAAAQAJMAAAARABIAAAAQAJQAAAARABIAAAAQAJUAAAARABIAAAAQAJYAAAARABIAAAAQAJcAAAARABIAAAAQAJgAAAARABIAAAAQAJkAAAARABIAAAAQAJoAAAARABIAAAAQAJsAAAARABIAAAAQAJwAAAARABIAAAAQAJ0AAAARABIAAAAQAJ4AAAARABIAAAAQAJ8AAAARABIAAAAQAKAAAAARABIAAAAQAKEAAAARABIAAAAQAKIAAAARABIAAAAQAKMAAAARABIAAAAQAKQAAAARABIAAAAQAKUAAAARABIAAAAQAKYAAAARABIAAAAQAKcAAAARABIAAAAQAKgAAAARABIAAAAQAKkAAAARABIAAAAQAKoAAAARABIAAAAQAKsAAAARABIAAAAQAKwAAAARABIAAAAQAK0AAAARABIAAAAQAK4AAAARABIAAAAQAK8AAAARABIAAAAQALAAAAARABIAAAAQALEAAAARABIAAAAQALIAAAARABIAAAAQALMAAAARABIAAAAQALQAAAARABIAAAAQALUAAAARABIAAAAQALYAAAARABIAAAAQALcAAAARABIAAAAQALgAAAARABIAAAAQALkAAAARABIAAAAQALoAAAARABIAAAAQALsAAAARABIAAAAQALwAAAARABIAAAAQAL0AAAARABIAAAAQAL4AAAARABIAAAAQAL8AAAARABIAAAAQAMAAAAARABIAAAAQAMEAAAARABIAAAAQAMIAAAARABIAAAAQAMMAAAARABIAAAAQAMQAAAARABIAAAAQAMUAAAARABIAAAAQAMYAAAARABIAAAAQAMcAAAARABIAAAAQAMgAAAARABIAAAADADwAAAATABIAAAADAD0AAAATABIAAAADAD4AAAATABIAAAADAD8AAAATABIAAAADAEAAAAATABIAAAADAEEAAAATABIAAAADAEIAAAATABIAAAADAEMAAAATABIAAAADAEQAAAATABIAAAADAEUAAAATABIAAAADAEYAAAATABIAAAADAEcAAAATABIAAAADAEgAAAATABIAAAADAEkAAAATABIAAAADAEoAAAATABIAAAADAEsAAAATABIAAAADAEwAAAATABIAAAADAE0AAAATABIAAAADAE4AAAATABIAAAADAE8AAAATABIAAAADAFAAAAATABIAAAADAFEAAAATABIAAAADAFIAAAATABIAAAADAFMAAAATABIAAAADAFQAAAATABIAAAADAFUAAAATABIAAAADAFYAAAATABIAAAADAFcAAAATABIAAAADAFgAAAATABIAAAADAFkAAAATABIAAAADAFoAAAATABIAAAADAFsAAAATABIAAAADAFwAAAATABIAAAADAF0AAAATABIAAAADAF4AAAATABIAAAADAF8AAAATABIAAAADAGAAAAATABIAAAADAGEAAAATABIAAAADAGIAAAATABIAAAADAGMAAAATABIAAAADAGQAAAATABIAAAADAGUAAAATABIAAAADAGYAAAATABIAAAADAGcAAAATABIAAAADAGgAAAATABIAAAADAGkAAAATABIAAAADAGoAAAATABIAAAADAGsAAAATABIAAAADAGwAAAATABIAAAADAG0AAAATABIAAAADAG4AAAATABIAAAADAG8AAAATABIAAAADAHAAAAATABIAAAADAHEAAAATABIAAAADAHIAAAATABIAAAADAHMAAAATABIAAAADAHQAAAATABIAAAADAHUAAAATABIAAAADAHYAAAATABIAAAADAHcAAAATABIAAAADAHgAAAATABIAAAADAHkAAAATABIAAAADAHoAAAATABIAAAADAHsAAAATABIAAAADAHwAAAATABIAAAADAH0AAAATABIAAAADAH4AAAATABIAAAADAH8AAAATABIAAAADAIAAAAATABIAAAADAIEAAAATABIAAAADAIIAAAATABIAAAADAIMAAAATABIAAAADAIQAAAATABIAAAADAIUAAAATABIAAAADAIYAAAATABIAAAADAIcAAAATABIAAAADAIgAAAATABIAAAADAIkAAAATABIAAAADAIoAAAATABIAAAADAIsAAAATABIAAAADAIwAAAATABIAAAADAI0AAAATABIAAAADAI4AAAATABIAAAADAI8AAAATABIAAAADAJAAAAATABIAAAADAJEAAAATABIAAAADAJIAAAATABIAAAADAJMAAAATABIAAAADAJQAAAATABIAAAADAJUAAAATABIAAAADAJYAAAATABIAAAADAJcAAAATABIAAAADAJgAAAATABIAAAADAJkAAAATABIAAAADAJoAAAATABIAAAADAJsAAAATABIAAAADAJwAAAATABIAAAADAJ0AAAATABIAAAADAJ4AAAATABIAAAADAJ8AAAATABIAAAADAKAAAAATABIAAAADAKEAAAATABIAAAADAKIAAAATABIAAAADAKMAAAATABIAAAADAKQAAAATABIAAAADAKUAAAATABIAAAADAKYAAAATABIAAAADAKcAAAATABIAAAADAKgAAAATABIAAAADAKkAAAATABIAAAADAKoAAAATABIAAAADAKsAAAATABIAAAADAKwAAAATABIAAAADAK0AAAATABIAAAADAK4AAAATABIAAAADAK8AAAATABIAAAADALAAAAATABIAAAADALEAAAATABIAAAADALIAAAATABIAAAADALMAAAATABIAAAADALQAAAATABIAAAADALUAAAATABIAAAADALYAAAATABIAAAADALcAAAATABIAAAADALgAAAATABIAAAADALkAAAATABIAAAADALoAAAATABIAAAADALsAAAATABIAAAADALwAAAATABIAAAADAL0AAAATABIAAAADAL4AAAATABIAAAADAL8AAAATABIAAAADAMAAAAATABIAAAADAMEAAAATABIAAAADAMIAAAATABIAAAADAMMAAAATABIAAAADAMQAAAATABIAAAADAMUAAAATABIAAAADAMYAAAATABIAAAADAMcAAAATABIAAAADAMgAAAATABIAAAAEANMAAAASABEAAAAFANMAAAASABEAAAAGANMAAAASABEAAAAHANMAAAASABEAAAAIANMAAAASABEAAAAJANMAAAASABEAAAAKANMAAAASABEAAAALANMAAAASABEAAAAMANMAAAASABEAAAANANMAAAASABEAAAAOANMAAAASABEAAAAEAP//AAAQAAkAAAAFAP//AAAQAAkAAAAGAP//AAAQAAkAAAAHAP//AAAQAAkAAAAIAP//AAAQAAkAAAAJAP//AAAQAAkAAAAKAP//AAAQAAkAAAALAP//AAAQAAkAAAAMAP//AAAQAAkAAAANAP//AAAQAAkAAAAOAP//AAAQAAkAAAAPAP//AAAQAAkAAAA=")
tile_set = ExtResource("4_0y7o1")

[node name="StaticBody2D" type="StaticBody2D" parent="World"]
position = Vector2(115, 140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/StaticBody2D"]
position = Vector2(42, 0)
shape = SubResource("RectangleShape2D_6k1d8")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 320.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 72)
script = ExtResource("3_8f3e8")

[node name="StartScreen1" type="Control" parent="GUI"]
anchors_preset = 0
offset_top = -288.0
offset_right = 320.0

[node name="Hi-Score" type="TextEdit" parent="GUI/StartScreen1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 15.0
offset_right = 82.5
offset_bottom = 47.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("9_cfu0n")
text = "HI    000000"

[node name="TextEdit" type="RichTextLabel" parent="GUI/StartScreen1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -69.0
offset_right = 125.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font=res://fonts/VonwaonBitmap-16px.ttf][font size=48]TOWER FALL[/font]
[font=res://fonts/VonwaonBitmap-12px.ttf][font size=12]15x3J021Bit2410[/font]"

[node name="StartButton" type="Button" parent="GUI/StartScreen1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 31.0
offset_right = 50.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_jsu31")
theme_override_font_sizes/font_size = 16
text = "START"

[node name="StartButton2" type="Button" parent="GUI/StartScreen1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 66.0
offset_right = 50.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_jsu31")
theme_override_fonts/font = ExtResource("9_f8by4")
theme_override_font_sizes/font_size = 16
text = "CREDITS"

[node name="StartScreen2" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_top = -576.0
offset_right = 320.0
offset_bottom = -288.0

[node name="RichTextLabel2" type="RichTextLabel" parent="GUI/StartScreen2"]
layout_mode = 0
offset_top = 70.0
offset_right = 320.0
offset_bottom = 198.0
bbcode_enabled = true
text = "[center][font=res://fonts/NokiaKokia.ttf][font size=48]GOKIA[/font]
[font=res://fonts/NokiaSansS60-Regular.ttf][font size=30]Connecting Signal[/font]"

[node name="TextEdit" type="RichTextLabel" parent="GUI/StartScreen2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -88.0
offset_right = 160.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center][font=res://fonts/VonwaonBitmap-16px.ttf][font size=16]Use Space & Arrow Keys Only[/font]"

[node name="StartScreen3" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = -288.0
offset_right = 640.0

[node name="RichTextLabel2" type="RichTextLabel" parent="GUI/StartScreen3"]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 316.0
offset_bottom = 267.0
bbcode_enabled = true
text = "[font=res://fonts/VonwaonBitmap-16px.ttf][font size=20]
Tower Fall by 15x3
A small game for 1-bit Jam #4

- Music & SFX by Joel Steudler
- Using Kenneys 1 bit tilemap pack
[/font]"

[node name="TextEdit" type="RichTextLabel" parent="GUI/StartScreen3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -88.0
offset_right = 160.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center][font=res://fonts/VonwaonBitmap-16px.ttf][font size=16]Press Shift to return[/font]"

[node name="TextEdit" type="RichTextLabel" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = 95.0
offset_right = 103.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
bbcode_enabled = true
text = "[center][font=res://fonts/VonwaonBitmap-16px.ttf][font size=36]TOWER FALL[/font]"

[node name="SpeedProgressBar" type="TextureProgressBar" parent="GUI"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 37.0
offset_bottom = 120.0
scale = Vector2(2, 2)
value = 21.0
fill_mode = 3
texture_under = ExtResource("6_fobtj")
texture_progress = ExtResource("7_eey7u")

[node name="HeartProgressBar2" type="TextureProgressBar" parent="GUI"]
layout_mode = 0
offset_top = 220.0
offset_right = 40.0
offset_bottom = 260.0
scale = Vector2(2, 2)
value = 100.0
rounded = true
fill_mode = 4
texture_progress = ExtResource("8_wdn2o")

[node name="Hi-Score" type="TextEdit" parent="GUI"]
layout_mode = 0
offset_left = 295.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 52.0
rotation = 1.5708
theme_override_fonts/font = ExtResource("9_cfu0n")
text = "HI    000000"
editable = false

[node name="Score" type="TextEdit" parent="GUI"]
layout_mode = 0
offset_left = 319.0
offset_top = 20.0
offset_right = 484.0
offset_bottom = 52.0
rotation = 1.5708
theme_override_fonts/font = ExtResource("9_cfu0n")
text = "SCORE 000000"
editable = false

[node name="GetReady" type="RichTextLabel" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font=res://fonts/PixelEmulator-xq08.ttf][font size=24]READY[/font]"

[node name="GameOver" type="RichTextLabel" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font=res://fonts/PixelEmulator-xq08.ttf][font size=24]GAME OVER[/font]"

[node name="Camera" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Camera"]
physics_interpolation_mode = 2
position = Vector2(160, -432)

[node name="CanvasGroup" type="CanvasGroup" parent="Camera/Camera2D"]
position = Vector2(-160, -144)

[node name="CanvasLayer2" type="CanvasLayer" parent="Camera/Camera2D/CanvasGroup"]

[node name="CRTShader" type="ColorRect" parent="Camera/Camera2D/CanvasGroup/CanvasLayer2"]
material = SubResource("ShaderMaterial_i8uc0")
offset_right = 320.0
offset_bottom = 288.0
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera/Camera2D/CanvasGroup"]
layer = 2

[node name="DitherShader" type="ColorRect" parent="Camera/Camera2D/CanvasGroup/CanvasLayer"]
material = ExtResource("9_a3mqr")
offset_right = 320.0
offset_bottom = 288.0
metadata/_edit_use_anchors_ = true

[node name="Timers" type="Node" parent="."]

[node name="MobTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="FlyingTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="Audios" type="Node" parent="."]

[node name="Beep" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("15_guqou")

[node name="StartSound" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("16_uf7pm")

[node name="BGM" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("17_7f12c")
parameters/looping = true

[connection signal="died" from="World/Player" to="." method="_on_player_died"]
[connection signal="pressed" from="GUI/StartScreen1/StartButton" to="GUI" method="_on_start_button_pressed"]
[connection signal="pressed" from="GUI/StartScreen1/StartButton2" to="GUI" method="_on_start_button_2_pressed"]
[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="Timers/FlyingTimer" to="." method="_on_flying_timer_timeout"]
